YD-713 Addressed many SonarQube-flagged issues (#994)
* YD-713 Addressed many SonarQube-flagged issues

* Use enhanced switch statement