@@ -7,7 +7,6 @@ package nu.yona.server.entities;
 import java.lang.reflect.Field;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 
@@ -23,8 +22,7 @@ public class GoalRepositoryMock extends MockJpaRepositoryEntityWithUuid<Goal> im
 	@Override
 	public List<Goal> findByUserAnonymizedId(UUID userAnonymizedId)
 	{
-		return Lists.newArrayList(super.findAll()).stream().filter(g -> getUserAnonymizedId(g).equals(userAnonymizedId))
-				.collect(Collectors.toList());
+		return Lists.newArrayList(super.findAll()).stream().filter(g -> getUserAnonymizedId(g).equals(userAnonymizedId)).toList();
 	}
 
 	private UUID getUserAnonymizedId(Goal goal)
